@@ -10,6 +10,11 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/78
+  Documentation update: if you iterate over a channel, the
+  sender must send StopIteration manually. See
+  http://stackless.readthedocs.io/en/latest/library/stackless/channels.html#channel.__iter__
+
 - https://bitbucket.org/stackless-dev/stackless/issue/83
   Fix demo/tracing.py: don't use flextype features. Unfortunately
   it is no longer possible to change the __repr__ method of class tasklet.
